--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+/*Reset*/
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 /****** General ***********/
 * {
   font-family: 'Raleway', sans-serif;
@@ -51,6 +60,31 @@ body {
 
 .neutral-star {
   color: var(--main-bg-color);
+}
+
+/******Header***********/
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo {
+  width: 61.1px;
+  height: 19px;
+  margin: 30px 0;
+}
+
+nav a {
+  text-decoration: none;
+  padding: 0 25px;
+  color: inherit;
+}
+
+nav a:hover {
+  color: var(--main-color);
+  border-top: 2px solid var(--main-color);
+  padding-top: 14px;
 }
 
 /****** Hebergements And Populaires ***********/
