--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
   --main-color: #0065fc;
   --main-bg-color: #f2f2f2;
   --filter-bg-color: #deebff;
+  --white: #ffffff;
 }
 
 .fa-solid {
@@ -32,6 +33,12 @@ body {
   max-width: 1440px;
   padding: 0 50px;
   box-sizing: border-box;
+}
+
+h1 {
+  font-size: 1.375rem;
+  font-weight: 700;
+  margin-bottom: 8px;
 }
 
 .section-title {
@@ -85,6 +92,60 @@ nav a:hover {
   color: var(--main-color);
   border-top: 2px solid var(--main-color);
   padding-top: 14px;
+}
+
+/******Section "hero"***********/
+.hero {
+  margin-top: 30px;
+  margin-bottom: 35px;
+}
+
+.hero-title p {
+  margin-bottom: 35px;
+}
+
+form {
+  display: flex;
+  margin-bottom: 35px;
+}
+
+.fa-location-dot {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 49px;
+  background-color: var(--main-bg-color);
+  border-radius: 15px 0 0 15px;
+  font-size: 18px;
+  color: inherit;
+}
+
+input {
+  width: 173px;
+  height: 49px;
+  border: none;
+  outline: 0;
+  font-size: 18px;
+  color: inherit;
+}
+
+input::placeholder {
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+  color: inherit;
+}
+
+button {
+  width: 119px;
+  height: 49px;
+  border: none;
+  background-color: var(--main-color);
+  border-radius: 0 15px 15px 0;
+  font-size: 18px;
+  color: var(--white);
+  text-align: center;
 }
 
 /****** Hebergements And Populaires ***********/
