--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,13 @@
 }
 
 .fa-solid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: var(--main-color);
+  width: 22px;
+  height: 22px;
+  margin-right: 10px;
 }
 
 body {
@@ -122,10 +128,10 @@ form {
 }
 
 input {
-  width: 173px;
+  width: 213px;
   height: 49px;
-  border: none;
-  outline: 0;
+  border: 2px solid var(--main-bg-color);
+  outline: none;
   font-size: 18px;
   color: inherit;
 }
@@ -138,14 +144,74 @@ input::placeholder {
 }
 
 button {
-  width: 119px;
+  width: 130px;
   height: 49px;
   border: none;
   background-color: var(--main-color);
-  border-radius: 0 15px 15px 0;
+  border-radius: 0 15px 16px 0;
   font-size: 18px;
   color: var(--white);
   text-align: center;
+}
+
+.filters {
+  display: flex;
+  align-items: center;
+  margin-bottom: 35px;
+}
+
+.filters h2 {
+  padding-right: 15px;
+}
+
+.filters-list {
+  display: flex;
+}
+
+.filter-container {
+  display: flex;
+  align-items: center;
+  width: 173px;
+  height: 49px;
+  padding: 4px 19px;
+  border: 3px solid var(--main-bg-color);
+  border-radius: 25px;
+  margin-right: 15px;
+}
+
+.filter-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.filter-container:hover {
+  background-color: var(--filter-bg-color);
+  cursor: pointer;
+}
+
+.filter-container span {
+  font-size: 17px;
+  font-weight: 700;
+}
+
+.infos {
+  display: flex;
+  align-items: center;
+}
+
+.infos-icon {
+  width: 24px;
+  height: 24px;
+  border: 2px solid var(--main-bg-color);
+  border-radius: 50px;
+  padding: auto;
+  margin-right: 10px;
+}
+
+.fa-info {
+  font-size: 12px;
+  padding-bottom: 2px;
 }
 
 /****** Hebergements And Populaires ***********/
