--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,7 @@
 }
 
 .fa-solid {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   color: var(--main-color);
-  width: 22px;
-  height: 22px;
-  margin-right: 10px;
 }
 
 body {
@@ -170,19 +164,23 @@ button {
 
 .filter-container {
   display: flex;
+  justify-content: center;
   align-items: center;
   width: 173px;
-  height: 49px;
+  height: 42px;
   padding: 4px 19px;
   border: 3px solid var(--main-bg-color);
   border-radius: 25px;
   margin-right: 15px;
 }
 
-.filter-container {
+.filter-container i {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 22px;
+  height: 22px;
+  margin-right: 10px;
 }
 
 .filter-container:hover {
