--- a/css/style.css
+++ b/css/style.css
@@ -166,9 +166,9 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 173px;
-  height: 42px;
-  padding: 4px 19px;
+  width: 160px;
+  height: 48px;
+  padding: 4px 10px;
   border: 3px solid var(--main-bg-color);
   border-radius: 25px;
   margin-right: 15px;
@@ -176,11 +176,10 @@ button {
 
 .filter-container i {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  width: 22px;
-  height: 22px;
-  margin-right: 10px;
+  width: 24px;
+  height: 24px;
 }
 
 .filter-container:hover {
@@ -204,7 +203,6 @@ button {
   border: 2px solid var(--main-bg-color);
   border-radius: 50px;
   padding: auto;
-  margin-right: 10px;
 }
 
 .fa-info {
@@ -228,6 +226,49 @@ button {
 /****** Hebergements ***********/
 .hebergements {
   width: 65%;
+}
+
+.hebergements-cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-left: 28px;
+}
+
+.hebergements-cards .card {
+  display: flex;
+  flex-direction: column;
+  margin-top: 33px;
+  margin-right: 30px;
+  width: 230px;
+  height: 200px;
+}
+
+.hebergements-cards img {
+  width: 100%;
+  height: 110px;
+  border-radius: 20px 20px 0 0;
+}
+
+.hebergements-cards .card-content {
+  padding-top: 10px;
+  padding-left: 15px;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  line-height: 22px;
+}
+
+.link {
+  margin-top: 30px;
+  margin-left: 5px;
+}
+
+.link a {
+  text-decoration: none;
+  color: inherit;
+  font-weight: 700;
+  font-size: 16px;
 }
 
 /****** Populaires ***********/
