--- a/css/style.css
+++ b/css/style.css
@@ -198,11 +198,15 @@ button {
 }
 
 .infos-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 24px;
   height: 24px;
   border: 2px solid var(--main-bg-color);
   border-radius: 50px;
   padding: auto;
+  margin-right: 10px;
 }
 
 .fa-info {
@@ -314,6 +318,47 @@ button {
 
 .populaires-cards .card-rating {
   margin-bottom: 5px;
+}
+
+/*****Section Activités***********/
+.activity {
+}
+
+.activity-title h2 {
+  margin-top: 30px;
+  margin-left: 35px;
+}
+
+.activity-list {
+  display: flex;
+  margin: 30px;
+}
+
+.activity-list-card {
+  padding-right: 30px;
+}
+
+.activity-card {
+  width: 298px;
+  height: 439px;
+  border-radius: 20px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+}
+
+.activity-card img {
+  width: 100%;
+  height: 380px;
+  border-radius: 20px 20px 0 0;
+  object-fit: cover;
+}
+
+.activity-text {
+  padding-top: 15px;
+  padding-left: 20px;
+}
+
+.activity-text p {
+  font-weight: 700;
 }
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
