--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ button {
 .hebergements-cards .card {
   display: flex;
   flex-direction: column;
-  margin-top: 33px;
+  margin-top: 30px;
   margin-right: 30px;
   width: 230px;
   height: 200px;
@@ -264,7 +264,7 @@ button {
 }
 
 .link {
-  margin-top: 30px;
+  margin-top: 40px;
   margin-left: 5px;
 }
 
@@ -321,17 +321,14 @@ button {
 }
 
 /*****Section Activités***********/
-.activity {
-}
-
 .activity-title h2 {
   margin-top: 30px;
+  margin-bottom: 30px;
   margin-left: 35px;
 }
 
 .activity-list {
   display: flex;
-  margin: 30px;
 }
 
 .activity-list-card {
@@ -359,6 +356,30 @@ button {
 
 .activity-text p {
   font-weight: 700;
+}
+
+/*****Footer***********/
+footer {
+  margin-top: 35px;
+  background-color: var(--main-bg-color);
+  display: flex;
+  padding: 20px;
+}
+
+footer a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.a-propos,
+.charte,
+.assistance {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 20px;
+
+  margin-right: 150px;
 }
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
