--- a/css/style.css
+++ b/css/style.css
@@ -88,10 +88,11 @@ nav a {
   color: inherit;
 }
 
-nav a:hover {
+nav a:hover,
+.selected {
   color: var(--main-color);
-  border-top: 2px solid var(--main-color);
-  padding-top: 14px;
+  border-top: 3px solid var(--main-color);
+  padding-top: 28px;
 }
 
 /******Section "hero"***********/
@@ -244,7 +245,7 @@ button {
   flex-direction: column;
   margin-top: 30px;
   margin-right: 30px;
-  width: 230px;
+  width: 29%;
   height: 200px;
 }
 
@@ -329,6 +330,7 @@ button {
 
 .activity-list {
   display: flex;
+  margin-left: 23px;
 }
 
 .activity-list-card {
