--- a/css/style.css
+++ b/css/style.css
@@ -236,16 +236,16 @@ button {
 .hebergements-cards {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  gap: 10px;
   flex-wrap: wrap;
-  margin-left: 28px;
 }
 
 .hebergements-cards .card {
   display: flex;
   flex-direction: column;
   margin-top: 30px;
-  margin-right: 30px;
-  width: 29%;
+  width: 31%;
   height: 200px;
 }
 
@@ -256,12 +256,21 @@ button {
 }
 
 .hebergements-cards .card-content {
-  padding-top: 10px;
+  padding-top: 4px;
   padding-left: 15px;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
   line-height: 22px;
+}
+
+.card-txt h3 {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.card-txt p {
+  font-size: 14px;
 }
 
 .link {
@@ -325,27 +334,25 @@ button {
 .activity-title h2 {
   margin-top: 30px;
   margin-bottom: 30px;
-  margin-left: 35px;
+  margin-left: 30px;
 }
 
 .activity-list {
   display: flex;
-  margin-left: 23px;
-}
-
-.activity-list-card {
-  padding-right: 30px;
+  justify-content: space-around;
+  gap: 20px;
+  flex-wrap: wrap;
 }
 
 .activity-card {
-  width: 298px;
+  width: 100%;
   height: 439px;
   border-radius: 20px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 .activity-card img {
-  width: 100%;
+  width: 298px;
   height: 380px;
   border-radius: 20px 20px 0 0;
   object-fit: cover;
