Fin de la mise en place du Responsiv design.

--- a/css/style.css
+++ b/css/style.css
@@ -563,6 +563,10 @@ footer a {
     width: 45%;
     margin-right: 0;
   }
+
+  .filter-container span {
+    font-size: 14px;
+  }
   /******Section "Hébergements et populaires"******/
   .hebergements-and-populaires {
     flex-direction: column-reverse;
