--- a/css/style.css
+++ b/css/style.css
@@ -366,11 +366,13 @@ input::placeholder {
   justify-content: space-around;
   gap: 20px;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 .activity a {
   text-decoration: none;
   color: inherit;
+  width: 22%;
 }
 
 .activity-list a:hover {
@@ -386,7 +388,7 @@ input::placeholder {
 }
 
 .activity-card img {
-  width: 298px;
+  width: 100%;
   height: 380px;
   border-radius: 20px 20px 0 0;
   object-fit: cover;
